# SnakeGame

./: CMakeLists.txt  SnakeGame.sln
SnakeGame/: Fruit.cpp  Fruit.h  Game.cpp  Game.h  Map.cpp  Map.h  Snake.cpp  Snake.h  SnakeGame.vcxproj  SnakeGame.vcxproj.filters  SnakeMain.cpp  crt_memory_leaks.h  data.h  randomize.cpp  randomize.hpp
SnakeGame/Debug/: SnailGame.exe.recipe  SnailGame.ilk  SnakeGame.exe.recipe  SnakeGame.ilk  fruit.obj.enc  game.obj.enc  map.obj.enc  snake.obj.enc  snakemain.obj.enc  vc142.idb
SnakeGame/Debug/SnailGame.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SnailGame.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SnakeGame/Debug/SnakeGame.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SnakeGame.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SnakeGame/Release/: SnakeGame.exe.recipe  SnakeGame.iobj  SnakeGame.ipdb
SnakeGame/Release/SnakeGame.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SnakeGame.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SnakeGame/x64/Debug/: vc142.idb
SnakeGame/x64/Debug/SnakeGame.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SnakeGame.lastbuildstate
